aligned header, footer for tablets, and fixed #14 (main banner caption on hover)

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -14,10 +14,15 @@ footer{
     padding-top: 2em;
     border-top: 1px solid darken($color-gray, 5%);
     @extend .col-md-3;
+    @extend .col-sm-3;
     @media (min-width: $screen-sm-min) {
       margin-top: 1em;
       padding-top: 0;
       border-top: none;
+      font-size: 0.8em;
+    }
+    @media (min-width: $screen-md-min) {
+      font-size: 1em;
     }
   }
   .title{
