--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -7,7 +7,7 @@
   }
   .description{
     font-size: 0.8em;
-    margin-top: 27px;
+    margin-top: 25px;
     @media (min-width: $screen-sm-min) {
       line-height: 1.6;
     }
